--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -4,7 +4,7 @@
   <h2><%= link_to link.title, link.url %></h2>
 
   <% if link.source %>
-    <cite><%= link.cite %></cite>
+    <cite><%= link.source %></cite>
   <% end %>
 
   <% if link.blurb %>
